[package]
name = "webhook-httpd"
description = "simple HTTP(S) server for receiving webhooks and running commands"
version = "0.1.1"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
license = "BSD-2-Clause"

readme = "README.md"
repository = "https://github.com/de-vri-es/webhook-httpd"
keywords = ["webhook", "server", "http", "https", "CI"]
categories = ["web-programming::http-server"]

edition = "2018"

[features]
static-openssl = ["openssl/vendored"]

[dependencies]
chrono = "0.4.19"
env_logger = "0.8.2"
hmac = "0.10.1"
hyper = "0.13.9"
log = { version = "0.4.11", features = ["serde"] }
openssl = "0.10.31"
serde = { version = "1.0.118", features = ["derive"] }
sha2 = "0.9.2"
structopt = "0.3.21"
tokio = { version = "0.2.24", features = ["rt-core", "process", "stream", "io-util", "macros", "time"] }
tokio-openssl = "0.4.0"
serde_yaml = "0.8.14"

[dev-dependencies]
assert2 = "0.3.3"
