[package]
name = "webhook-httpd"
description = "simple HTTP(S) server for receiving webhooks and running commands"
version = "0.1.4"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
license = "BSD-2-Clause"

readme = "README.md"
repository = "https://github.com/de-vri-es/webhook-httpd"
keywords = ["webhook", "server", "http", "https", "CI"]
categories = ["web-programming::http-server"]

edition = "2018"

[features]
static-openssl = ["openssl/vendored"]

[dependencies]
chrono = "0.4.19"
env_logger = "0.9.0"
hmac = "0.12.1"
hyper = { version = "0.14.11", features = ["http1", "http2", "runtime", "server"] }
log = { version = "0.4.14", features = ["serde"] }
openssl = "0.10.35"
serde = { version = "1.0.127", features = ["derive"] }
sha2 = "0.10.2"
structopt = "0.3.22"
tokio = { version = "1.9.0", features = ["rt", "process", "net", "io-util", "macros", "signal", "time"] }
tokio-stream = { version = "0.1.7", features = ["io-util"] }
tokio-openssl = "0.6.2"
serde_yaml = "0.9.13"

[dev-dependencies]
assert2 = "0.3.6"
