[package]
name = "webhook-httpd"
description = "simple HTTP(S) server for receiving webhooks and running commands"
version = "0.1.6"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
license = "BSD-2-Clause"

readme = "README.md"
repository = "https://github.com/de-vri-es/webhook-httpd"
keywords = ["webhook", "server", "http", "https", "CI"]
categories = ["web-programming::http-server"]

edition = "2018"

[features]
static-openssl = ["openssl/vendored"]

[dependencies]
chrono = "0.4.19"
clap = { version = "4.4.5", features = ["derive", "color"] }
env_logger = "0.10.0"
hmac = "0.12.1"
hyper = { version = "0.14.11", features = ["http1", "http2", "runtime", "server"] }
log = { version = "0.4.14", features = ["serde"] }
openssl = "0.10.66"
serde = { version = "1.0.127", features = ["derive"] }
serde_yaml = "0.9.13"
sha2 = "0.10.2"
tokio = { version = "1.24.2", features = ["rt", "process", "net", "io-util", "macros", "signal", "time"] }
tokio-openssl = "0.6.2"
tokio-stream = { version = "0.1.7", features = ["io-util"] }
indexmap = { version = "2.0.2", features = ["serde"] }

[dev-dependencies]
assert2 = "0.3.6"
multer = { version="2.1.0", features = ["tokio-io"] }
tokio = { version = "1.24.2", features = ["rt", "macros", "io-std"] }
